fix header z-index

--- a/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_header.sass
+++ b/VirtoCommerce.Platform.Web/wwwroot/css/themes/main/sass/modules/_header.sass
@@ -3,6 +3,7 @@
   display: flex
   height: $headerHeight
   min-width: 953px
+  position: relative
   transition: all .35s
   z-index: 100
   &__info
